[package]
name = "dog-fetcher"
edition = "2021"
version = "0.1.1"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasi = "0.13.2"
wit-bindgen = "0.32"
reqwest = "0.11"
chrono = "0.4"
tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }
calamine = "0.18"
warp = "0.3"
handlebars = "4.1"
